--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <section class="hero">
         <div class="hero-wrapper container">
           <h1 class="hero-head">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-btn" type="button">Заказать услугу</button>
+          <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <section class="bonuses section">
@@ -95,31 +95,35 @@
           <h2 class="main-heading">Чем мы занимаемся</h2>
           <ul class="box-list list">
             <li class="box-list-item">
-              <img
+              <div class="box-wrapper"><img
                 class="box-img"
                 src="./images/section-box/box1.jpg"
                 alt="Планирование сайта"
                 height="294"
                 width="370"
-              />
+              /><h3 class="box-header">Десктопні додатки</h3></div>
             </li>
             <li class="box-list-item">
-              <img
+              <div class="box-wrapper"><img
                 class="box-img"
                 src="./images/section-box/box2.jpg"
                 alt="Оптимизация дял мобильного устройства"
                 height="294"
                 width="370"
               />
+                <h3 class="box-header">Мобільні додатки</h3>
+              </div>
             </li>
-            <li class="box-list-item">
-              <img
+            <li class="box-list-item"><div class="box-wrapper"><img
                 class="box-img"
                 src="./images/section-box/box3.jpg"
                 alt="Вибор цвета на планшете"
                 height="294"
                 width="370"
               />
+                <h3 class="box-header">Дизайнерські рішення</h3>
+              </div>
+              
             </li>
           </ul>
         </div>
@@ -141,28 +145,28 @@
                 <p class="team-position" lang="en">Product Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
@@ -184,28 +188,28 @@
                 <p class="team-position" lang="en">Frontend Developer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
@@ -227,28 +231,28 @@
                 <p class="team-position" lang="en">Marketing</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
@@ -271,28 +275,28 @@
                 <p class="team-position" lang="en">UI Designer</p>
                 <ul class="social-list list">
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
-                    <a href="#" class="social-link">
+                    <a href="#" class="social-link link">
                       <svg class="social-list-icon" width="20px" height="20px">
                         <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
@@ -309,42 +313,42 @@
           <h2 class="main-heading">Постоянные клиенты</h2>
           <ul class="client-list list">
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-list-item">
-              <a href="" class="client-list-link">
+              <a href="" class="client-list-link link">
                 <svg class="client-list-icon" width="106" height="60">
                   <use href="./images/sprite.svg#company6"></use>
                 </svg>
@@ -387,28 +391,28 @@
           <p class="footer-paragraph">присоединяйтесь</p>
           <ul class="social-list list social-list-footer">
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
@@ -418,5 +422,12 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal"><button class="modal-close-btn" data-modal-close><svg class="modal-close-icon" width="18" height="18">
+          <use href="./images/sprite.svg#close-modal"></use>
+        </svg></button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
