--- a/portfolio.html
+++ b/portfolio.html
@@ -74,13 +74,13 @@
           <ul class="portfolio-list list">
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio1.jpg"
                   alt="Технокряк"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 class="portfolio-heading">Технокряк</h2>
                   <p class="portfolio-descr">Веб-сайт</p>
@@ -89,7 +89,7 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   lang="en"
                   src="./images/section-portfolio/portfolio2.jpg"
@@ -97,7 +97,7 @@
             Golden Star"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Постер New Orlean vs Golden Star</h2>
                   <p class="portfolio-descr">Дизайн</p>
@@ -106,13 +106,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio3.jpg"
                   alt="Ресторан сифуд"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Ресторан Seafood</h2>
                   <p class="portfolio-descr">Приложение</p>
@@ -121,13 +121,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio4.jpg"
                   alt="Проект прайм"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Проект Prime</h2>
                   <p class="portfolio-descr">Маркетинг</p>
@@ -136,13 +136,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio5.jpg"
                   alt="Проект боксез"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Проект Boxes</h2>
                   <p class="portfolio-descr">Приложение</p>
@@ -151,7 +151,7 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   lang="en"
                   src="./images/section-portfolio/portfolio6.jpg"
@@ -159,7 +159,7 @@
             Borders"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Inspiration has no Borders</h2>
                   <p class="portfolio-descr">Веб-сайт</p>
@@ -168,13 +168,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio7.jpg"
                   alt="Издание Лимитед Единшн"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Издание Limited Edition</h2>
                   <p class="portfolio-descr">Дизайн</p>
@@ -183,13 +183,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio8.jpg"
                   alt="Проект ЛАБ"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Проект LAB</h2>
                   <p class="portfolio-descr">Маркетинг</p>
@@ -198,13 +198,13 @@
             </li>
             <li class="portfolio-list-item">
               <a href="#" class="portfolio-link link"
-                ><img
+                ><div class="portfolio-img-wrapper"><img
                   class="portfolio-img"
                   src="./images/section-portfolio/portfolio9.jpg"
                   alt="Растущий бизнесс"
                   height="294"
                   width="370"
-                />
+                /><p class="img-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p></div>
                 <div class="portfolio-item-wrapper">
                   <h2 lang="en" class="portfolio-heading">Growing Business</h2>
                   <p class="portfolio-descr">Приложение</p>
@@ -248,28 +248,28 @@
           <h3 class="footer-paragraph">присоединяйтесь</h3>
           <ul class="social-list list social-list-footer">
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-link-footer">
+              <a href="#" class="social-link-footer link">
                 <svg class="social-list-icon-footer" width="20px" height="20px">
                   <use href="./images/sprite.svg#linkedin"></use>
                 </svg>
